# advent_of_code

./: .gitignore  README.md
2018/dec10/rasmus_bonnedal/: CMakeLists.txt  day10.cpp  input.txt
2020/dec4/johan_toft/: Cargo.toml  day4.rs
dec1/carl_toft/: day1.py
dec1/jesper_ericsson/: AK1.py
dec1/mans_larsson/: main.py
dec1/rasmus_bonnedal/: CMakeLists.txt  day01.cpp
dec1/rickard_sirefelt/: input.txt  prob1.py  prob2.py
dec1/ronny_videkull/: day1input.el
dec11/jesper_ericsson/: part1.py
dec11/rasmus_bonnedal/: dec11.cpp
dec2/carl_toft/: day2.py
dec2/jesper_ericsson/: data.csv
dec2/rickard_sirefelt/: prob1.py  prob2.py
dec2/ronny_videkull/: day2input.el  day2pt1.el
dec3/carl_toft/: day3.py
dec3/jesper_ericsson/: part1.py  part2.py
dec3/rasmus_bonnedal/: CMakeLists.txt
dec3/rickard_sirefelt/: prob1.py
dec3/ronny_videkull/: day3pt1.el  day3pt2.el
dec4/carl_toft/: day4.py
dec4/jesper_ericsson/: testdata.csv
dec4/mans_larsson/: main.py
dec4/rasmus_bonnedal/: CMakeLists.txt
dec5/jesper_ericsson/: part1.py
dec5/mans_larsson/: main.py
dec5/rasmus_bonnedal/: CMakeLists.txt  c.bat  day05.cpp
dec5/rickard_sirefelt/: prob2.py
dec5/ronny_videkull/: pt2.el
dec6/jesper_ericsson/: part2.py
dec6/rasmus_bonnedal/: c.sh  day06.cpp
dec6/rickard_sirefelt/: prob1.py
dec7/carl_toft/: day7.py
dec7/jesper_ericsson/: part2.py
dec7/mans_larsson/: main.py
dec7/rickard_sirefelt/: prob1.py  prob2.py
dec8/carl_toft/: day8.py
dec8/jesper_ericsson/: part1.py  part2.py
dec8/mans_larsson/: main.py
dec8/rasmus_bonnedal/: day08.cpp  (+1 more)
(+730 files in other folders)
