[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Johan Toft <johan.toft@smarteye.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = "1"
lazy_static = "1.4.0"

[[bin]]
name = "day4"
path = "day4.rs"
